--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
                     <div class="topicos">
                         <a>Sobre Nós</a>
                         <a>Ajuda</a>
+                        <div class="iconeCarrinho">
+                            <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1" />
+                            </svg>
+                            <span>0</span>
+                        </div>
                     </div>
 
                 </div>
@@ -32,7 +39,40 @@
         </div>
 
     </div>
-    <section class="banner"></section>
+    <!-- <section class="banner"></section> -->
+    <section class="slider">
+        <div class="slider-content">
+            
+            <input type="radio" name="btn-radio" id="radio1">
+            <input type="radio" name="btn-radio" id="radio2">
+            <input type="radio" name="btn-radio" id="radio3">
+
+            <div class="slide-box primeiro">
+                <img src="imagem/slide-1.svg" alt="">
+            </div>
+
+            <div class="slide-box">
+                <img class="img-desktop" src="imagem/slide-2.svg" alt="slide 3">
+            </div>
+
+            <div class="slide-box">
+                <img class="img-desktop" src="imagem/slide-3.svg" alt="slide 3">
+            </div>
+
+            <div class="nav-auto">
+                <div class="auto-btn1"></div>
+                <div class="auto-btn2"></div>
+                <div class="auto-btn3"></div>
+            </div>
+
+            <div class="nav-manual">
+                <label for="radio1" class="manual-btn"></label>
+                <label for="radio2" class="manual-btn"></label>
+                <label for="radio3" class="manual-btn"></label>
+            </div>
+
+        </div>
+    </section>
     <!----------------------------------------------------------------------------------------------------------->
 
 
@@ -46,13 +86,7 @@
 
 
             <div class="titulo">Lista de Produtos</div>
-            <div class="iconeCarrinho">
-                <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M6 15a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm0 0h8m-8 0-1-4m9 4a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-9-4h10l2-7H3m2 7L3 4m0 0-.792-3H1" />
-                </svg>
-                <span>0</span>
-            </div>
+    
         </header>
 
         <div class="container-lista">
