--- a/paginaProd.html
+++ b/paginaProd.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="navbar" id="navbar">
+    <!--<div class="navbar" id="navbar">
         <div class="container-FF" id="FF">
             <div class="flex">
 
@@ -27,30 +27,18 @@
             </div>
         </div>
 
-    </div>
+    </div>-->
+
+    <!--PAGINA-->
 
     <div class="containerProduct">
         <div class="paginaDoProd">
 
-            <div class="imagemProd">
-                <img src="imagem/1.png" alt="">
-            </div>
-
-            <div class="infoProd">
-                <h1>Xbox 360 Branco</h1>
-                <p>O Xbox 360 branco é um console de videogame da Microsoft que oferece uma grande variedade de jogos e
-                    recursos de entretenimento, como streaming de filmes e música, além de conectividade online.</p>
-            </div>
-
-            <div class="preco-btn">
-                <span id="preco">R$1.200,00</span>
-                <button>Adicionar Carrinho</button>
-            </div>
-
         </div>
     </div>
 
+
     <script src="app.js"></script>
-    <script src="teste.js"></script>
+    <script src="pagina.js"></script>
 </body>
 </html>
