--- a/segredo.html
+++ b/segredo.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SEGREDO</title>
 </head>
+<style>
+    body{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #eee;
+        flex-direction: column;
+    }
+    h1{
+        margin-top: 10%;
+    }
+    input{
+        width: 300px;
+        height: 30px;
+    }
+    button{
+        margin-top: 60px;
+        width: 300px;
+        height: 30px;
+        background-color: rgb(0, 0, 146);
+        color: white;
+    }
+</style>
 <body>
     <h1>OPS, você acabou descobrindo o segredo, mas para continuar você precisa da senha:</h1>
     <input type="password" id="senha" placeholder="Digite a senha">
