--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <img src="imagem/logo.png">
 
                     <div class="topicos">
-                        <a>Sobre Nós</a>
+                        <a href="sobreNos.html">Sobre Nós</a>
                         <a>Ajuda</a>
                         
                         <div class="theme-switch-wrapper">
