--- a/sobreNos.html
+++ b/sobreNos.html
@@ -35,7 +35,7 @@ box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.75);
         display: flex;
         align-items: center;
         width: 100%;
-        height: 90px;
+        height: 9vh;
         position: fixed;
         top: 0;
         left: 0;
@@ -50,10 +50,10 @@ box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.75);
     
     .navbar img {
         background-color: transparent;
-        margin-top: 16px;
-        margin-left: 90px;
-        width: 160px;
-        height: 50px;  
+        margin-top: 1vh;
+        margin-left: 9vw;
+        width: 10vw;
+        height: 4vh;  
     }
 h1,h2,strong{
     color: #003686;
